TerraformVariablesExample/variablesOnSampleFile/main.tf

provider "aws" {
  region     = "us-east-1"
  access_key = "key"
  secret_key = "key"
}

#Define Variables
variable "subnet_prefix" {
  description = "cidr block for the subnet"
  #type = string |number |bool |list(<TYPE>) |set(<TYPE>) |map(<TYPE>) |object({<ATTR NAME> = <TYPE>, ... }) | tuple([<TYPE>, ...])
}


# # 1. Create vpc
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "Production VPC"
  }
}


# # 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}


# # 3. Create Custom Route Table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }
  tags = {
    Name = "Prod"
  }
}

# # 4. Create a Subnet 
resource "aws_subnet" "prod-subnet1" {
  vpc_id            = aws_vpc.prod-vpc.id
  availability_zone = "us-east-1a"
  cidr_block        = var.subnet_prefix    #call the variable value,
  tags = {
    Name = "Production subnet1"
  }
}


# # 5. Associate subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.prod-subnet1.id
  route_table_id = aws_route_table.prod-route-table.id
}


# # 6. Create Security Group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow WEB inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" #any protocol
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}


# # 7. Create a network interface with an ip in the subnet that was created in step 4

resource "aws_network_interface" "allow_webserver_nic" {
  subnet_id       = aws_subnet.prod-subnet1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
  # attachment {
  #   instance     = aws_instance.test.id
  #   device_index = 1
  # }
}
